# SmolDesk

./: .codex.json  .env.example  .gitignore  .markdownlint.yaml  404.html  AGENTS.md  AGENTS_DEV_GUIDE.md  CODEX-FOLGEPROMPT-1.md  CODEX-FOLGEPROMPT-2.md  CODEX-FOLGEPROMPT-3.md  CODEX-PROMPT.md  Codex-Prompt.md  Deployment&Sicherheit.md  Makefile  README.md  build-all-packages.sh  build-fixes.sh  build-fixes2.sh  create-contexts.sh  create-missing-icons.sh  docs-validation-report.md  fix-all-issues.sh  fix-configs.sh  fix-hook.sh  fix-http-scope.sh  fix-icons-final.sh  fix-package-json.sh  fix-rgba-icons.sh  fix-rust-errors.sh  generate-checksums.sh  iframe.html  index.html  index.json  install-deps.sh  package-lock.json  package.json  package2.json  playwright.config.ts  project.json  quick-install.sh  (+5 more)
.github/: CODEX.md
.github/issues/: phase-4-reactivate-cargo-test.md
.github/workflows/: deploy-docs.yml  deploy-storybook.yml  docs-check.yml  (+4 more)
.storybook/: main.ts  preview.ts  test-runner.js
AGENTS/: index.html
api/: index.html
assets/: iframe-C19QrN-5.js  iframe-ClBGAVWn.js  iframe-D-S2yp3g.js
components/: index.html
docs/: AGENTS.md  README.md  docs-migration-plan.md  docs-styleguide.md  docs-validation-links.md  docusaurus.config.ts  openapi.yaml  package-lock.json  package.json  sidebars.ts
docs-migration-plan/: index.html
docs-styleguide/: index.html
docs-validation-links/: index.html
en/: 404.html  index.html  sitemap.xml
mobile/: AGENTS.md  README.md  app.json  jest.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
monitoring/: package.json
overview/: index.html
packaging/: smoldesk.desktop
scripts/: analyze-and-report.sh  apply_docs_diff.py  apply_git_diff.py  build-all-packages.sh  build-dev-env.sh  codex-create-issue.sh  dev-env-check.sh  dev-setup.sh  docs-generator.js  docs_validation.py  generate-checksums.sh  init-for-codex.sh  install-tauri-deps.sh  install-vitest.sh  package-deb.sh  package-rpm.sh  run-storybook-snapshots.sh  setup-project-structure.sh  sign-packages.sh  test-packages.sh  validate-components.sh  validate-storybook.sh
signaling-server/: Dockerfile  index.js  monitoring.js  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Cargo.toml.old  build.rs  tauri.conf.json
src-tauri/src/: connection_security.rs  connection_security.rs.old  input_forwarding.rs  input_forwarding_improved.rs  main.rs  screen_capture.rs
src-tauri/src/clipboard/: error.rs  mod.rs  types.rs  wayland_clipboard.rs  x11_clipboard.rs
src-tauri/src/file_transfer/: mod.rs
src-tauri/src/input_forwarding/: error.rs  factory.rs  forwarder_trait.rs  mod.rs  types.rs  utils.rs  wayland.rs  x11.rs
src-tauri/src/screen_capture/: buffer.rs  config.rs  error.rs  manager.rs  mod.rs  quality.rs  types.rs  utils.rs  wayland.rs  x11.rs  x11.rs.old
tags/: index.html
tests/: package.json  setup.ts
tools/: package.json
(+1295 files in other folders)
